layer.conf: COMPAT set to scarthgap

--- a/meta-rockchip-rv1106/conf/layer.conf
+++ b/meta-rockchip-rv1106/conf/layer.conf
@@ -10,4 +10,4 @@ BBFILE_PATTERN_rockchip-rv1106 = "^${LAYERDIR}/"
 BBFILE_PRIORITY_rockchip-rv1106 = "6"
 
 LAYERDEPENDS_rockchip-rv1106 = "core"
-LAYERSERIES_COMPAT_rockchip-rv1106 = "nanbield"
+LAYERSERIES_COMPAT_rockchip-rv1106 = "scarthgap"
